--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,10 @@
 cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 set(CMAKE_BUILD_TYPE DEBUG)
-
-
 project(mastering-xml)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-
-
-message("\n########################################## LibXslt ##########################################\n")
-#find_package(LibXslt)
-
-# if(${LibXslt_FOUND})
-#     MESSAGE("LibXslt_FOUND:" ${LibXslt_FOUND})
-#     MESSAGE("LibXslt_VERSION:" ${LibXslt_VERSION})
-#     MESSAGE("LIBXSLT_XSLTPROC_EXECUTABLE:" ${LIBXSLT_XSLTPROC_EXECUTABLE})
-#     MESSAGE("LIBXSLT_EXSLT_LIBRARIES:" ${LIBXSLT_EXSLT_LIBRARIES})
-#     add_executable(libxslt_demo src/libxslt_demo.cpp)
-#     target_link_libraries(libxslt_demo  ${LIBXSLT_EXSLT_LIBRARIES})
-# else()
-# 	message("LibXslt not found")
-# endif()
-
 
 
 
@@ -35,8 +17,8 @@ if(${TINYXML2_FOUND})
     MESSAGE("TINYXML2_FOUND:" ${TINYXML2_FOUND})
     MESSAGE("TINYXML2_VERSION:" ${TINYXML2_VERSION})
     MESSAGE("TINYXML2_LIBRARIES:" ${TINYXML2_LIBRARIES})
-    add_executable(tinyxml2_demo src/tinyxml2_demo.cpp)
-    target_link_libraries(tinyxml2_demo ${TINYXML2_LIBRARIES})
+    add_executable(tinyxml2_snippet src/tinyxml2_snippet.cpp)
+    target_link_libraries(tinyxml2_snippet ${TINYXML2_LIBRARIES})
 else()
 	message("tinyxml2 not found")
 endif()
@@ -47,7 +29,7 @@ endif()
 message("\n########################################## LibXml2 ##########################################\n")
 find_package(LibXml2)
 
-if(${LibXslt_FOUND})
+if(${LibXml2_FOUND})
 	MESSAGE("LibXml2_FOUND:" ${LibXml2_FOUND})
 	MESSAGE("LIBXML2_INCLUDE_DIR:" ${LIBXML2_INCLUDE_DIR})
 	MESSAGE("LIBXML2_INCLUDE_DIRS:" ${LIBXML2_INCLUDE_DIRS})
@@ -55,27 +37,23 @@ if(${LibXslt_FOUND})
 	MESSAGE("LIBXML2_DEFINITIONS:" ${LIBXML2_DEFINITIONS})
 	MESSAGE("LIBXML2_XMLLINT_EXECUTABLE:" ${LIBXML2_XMLLINT_EXECUTABLE})
 	MESSAGE("LIBXML2_VERSION_STRING:" ${LIBXML2_VERSION_STRING})
-	add_executable(libxml2_demo src/libxml2_demo.cpp)
-	target_link_libraries(libxml2_demo ${LIBXML2_LIBRARIES})
+        add_executable(libxml2_snippet src/libxml2_snippet.cpp)
+        target_link_libraries(libxml2_snippet ${LIBXML2_LIBRARIES})
 else()
 	message("LibXml2 not found")
 endif()
 
 
-
-
-
-
 message("\n########################################## XercesC ##########################################\n")
 find_package(XercesC)
 
-if(${LibXslt_FOUND})
+if(${XercesC_FOUND})
 	MESSAGE("XercesC_FOUND:" ${XercesC_FOUND})
 	MESSAGE("XercesC_VERSION:" ${XercesC_VERSION})
 	MESSAGE("XercesC_INCLUDE_DIRS:" ${XercesC_INCLUDE_DIRS})
 	MESSAGE("XercesC_LIBRARIES:" ${XercesC_LIBRARIES})
-	add_executable(xerces_c_demo src/xerces_c_demo.cpp)
-	target_link_libraries(xerces_c_demo ${XercesC_LIBRARIES})
+        add_executable(xerces_snippet src/xerces_snippet.cpp)
+        target_link_libraries(xerces_snippet ${XercesC_LIBRARIES})
 else()
 	message("XercesC not found")
 endif()
@@ -87,13 +65,13 @@ endif()
 message("\n########################################## XalanC ##########################################\n")
 find_package(XalanC)
 
-if(${LibXslt_FOUND})
+if(${XalanC_FOUND})
 	MESSAGE("XalanC_FOUND:" ${XalanC_FOUND})
 	MESSAGE("XalanC_VERSION:" ${XalanC_VERSION})
 	MESSAGE("XalanC_INCLUDE_DIRS:" ${XalanC_INCLUDE_DIRS})
 	MESSAGE("XalanC_LIBRARIES:" ${XalanC_LIBRARIES})
-	add_executable(xalan_c_demo src/xalan_c_demo.cpp)
-	target_link_libraries(xalan_c_demo ${XercesC_LIBRARIES})
+        add_executable(xalan_snippet src/xalan_snippet.cpp)
+        target_link_libraries(xalan_snippet ${XercesC_LIBRARIES})
 else()
 	message("XalanC not found")
 endif()
@@ -103,6 +81,20 @@ message("\n########################################## XQilla ###################
 message("\n########################################## opensp ##########################################\n") 
 
 
+message("\n########################################## LibXslt ##########################################\n")
+
+find_package(LibXslt)
+
+if(${LibXslt_FOUND})
+    MESSAGE("LibXslt_FOUND:" ${LibXslt_FOUND})
+    MESSAGE("LibXslt_VERSION:" ${LibXslt_VERSION})
+    MESSAGE("LIBXSLT_XSLTPROC_EXECUTABLE:" ${LIBXSLT_XSLTPROC_EXECUTABLE})
+    MESSAGE("LIBXSLT_EXSLT_LIBRARIES:" ${LIBXSLT_EXSLT_LIBRARIES})
+    add_executable(libxslt_snippet src/libxslt_snippet.cpp)
+    target_link_libraries(libxslt_snippet  ${LIBXSLT_EXSLT_LIBRARIES})
+else()
+    message("LibXslt not found")
+endif()
 
 
 
